// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`initPORT should find a port by itself if no env port 1`] = `
Object {
  "logCalls": Array [
    Array [
      "info",
      "Found a free port \${PORT}",
    ],
  ],
}
`;

exports[`initPORT should use the env port first 1`] = `
Object {
  "logCalls": Array [
    Array [
      "info",
      "Using ENV port 1337",
    ],
  ],
  "port": 1337,
}
`;
